[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.s721]
codegen-units = 1
incremental = false

[profile.release.package.s1155]
codegen-units = 1
incremental = false

[profile.release.package.s-std]
codegen-units = 1
incremental = false

[profile.release.package.factory]
codegen-units = 1
incremental = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false
