[package]
authors = ["Lua Zhi Zhan <zhizhan@sign.net>"]
description = "Factory contract for sign blockchain"
edition = "2021"
license = "Apache-2.0"
name = "factory"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = {version = "1.0.0"}
cosmwasm-storage = {version = "1.0.0-beta"}
cw-storage-plus = "0.13.2"
cw2 = {version = "0.13.2"}
schemars = "0.8.3"
serde = {version = "1.0.127", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.26"}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
