[package]
authors = ["Lua Zhi Zhan <zhizhan@sign.net>"]
edition = "2021"
license = "Apache-2.0"
name = "s1155"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.4"
cw-utils = "0.13.4"
cw1155 = "0.13.4"
cw1155-base = {version = "0.13.4", features = ["library"]}
cw2 = "0.13.4"
schemars = "0.8.1"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
