[package]
authors = ["Lua Zhi Zhan <zhizhan@sign.net>"]
description = "Sign NFD contract"
edition = "2021"
license = "Apache-2.0"
name = "s1155"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.4"
cw-utils = "0.13.4"
cw1155 = "0.13.4"
cw1155-base = {version = "0.13.4", features = ["library"]}
cw2 = "0.13.4"
s-std = {path = "../../packages/s-std"}
s1 = {path = "../../packages/s1"}
s2 = {path = "../../packages/s2"}
schemars = "0.8.1"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
thiserror = "1.0.20"
url = "2.2.2"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
